# Processador-ICMC-Rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assembler/: Cargo.toml
assembler/src/: ex.txt  label.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
isa/: Cargo.toml
isa/src/: lib.rs  memory.rs
processor/: Cargo.toml
processor/src/: errors.rs  instructions.rs  lib.rs  main.rs  peripherals.rs
processor/src/components/: ram.rs
processor/src/components/cpu/: instructions.rs
processor/src/io/: mod.rs  video.rs
processor/src/modules/: control_unit.rs  mod.rs  video.rs
simulator/: Cargo.toml  build.rs
simulator/resources/: entry-register.css  entry-register.ui  home-window.ui  mem_cell_row.ui  mem_row.cmb  mem_row.ui  mem_row.ui.cmb  memory-view  memory-view.ui  processor-screen.ui  processor-window.ui  register.ui  resources.gresource.xml  row.css  shortcuts.ui  sim.cmb  sim.cmb.db  sim.css  sim.ui  simulator-window.ui  simulator.cmb  window.ui
simulator/src/: instructions.rs  main.rs  processor.rs
simulator/src/files/: charmap.rs  mod.rs
simulator/src/handler/: processor.rs
simulator/src/mem_obj/: imp.rs  mod.rs
simulator/src/mem_row/: imp.rs  mod.rs
simulator/src/processor/: instructions.rs  mod.rs  video.rs
simulator/src/ui/: mod.rs  screen.rs  simulator_window.rs  window.rs
simulator/src/ui/processor_window/: entry_register.rs  memory_view.rs  mod.rs  processor_screen.rs
simulator/src/view/: mod.rs
simulator/src/window/: imp.rs  mod.rs
