[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "Processador-ICMC"
path = "src/main.rs"

[dependencies]
async-channel = "2.1.1"
env_logger = "0.11.3"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
isa = { path = "../isa" } 
processor = { path = "../processor" }
assembler = { path = "../assembler" }
log = "0.4.20"
once_cell = "1.19.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"]}
cairo-rs = "0.19.4"
regex = "1.10.3"

[build-dependencies]
glib-build-tools = "0.19.0"
